blog post updates

--- a/src/python/2023-02-16-PCA-Intuition-And-Math.ipynb
+++ b/src/python/2023-02-16-PCA-Intuition-And-Math.ipynb
@@ -9,6 +9,7 @@
     "layout: post\n",
     "permalink: pca-intuition-and-math\n",
     "title: \"PCA: Intuition And Math\"\n",
+    "description: \"Uniting the intuition and the math behind PCA!\"\n",
     "---"
    ]
   },
@@ -81,10 +82,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6b488c4d",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10da5113",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# HIDE_CELL_START"
+   ]
   },
   {
    "cell_type": "code",
@@ -157,7 +162,19 @@
    "id": "8562f05f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# HIDE_CELL_END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29cdb850",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hey\")"
+   ]
   }
  ],
  "metadata": {
