nb2md_cli and other files

--- a/src/python/ROC-Vs-PR-AUC.ipynb
+++ b/src/python/ROC-Vs-PR-AUC.ipynb
@@ -10,6 +10,9 @@
     "slug: roc-vs-pr-auc\n",
     "title: \"ROC AUC vs. PR AUC for Class Imbalance\"\n",
     "description: \"Uniting the intuition and the math behind PCA!\"\n",
+    "_draft: true\n",
+    "_date: today\n",
+    "_publish: true\n",
     "---"
    ]
   },
@@ -572,14 +575,6 @@
     "Depending on the situation, it's probably worth adding both to your metric suite!\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f545bcd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
