new mlops article and other changes

--- a/src/python/ROC-Vs-PR-AUC.ipynb
+++ b/src/python/ROC-Vs-PR-AUC.ipynb
@@ -9,16 +9,16 @@
     "layout: post\n",
     "slug: roc-vs-pr-auc\n",
     "title: \"ROC AUC vs. PR AUC for Class Imbalance\"\n",
-    "description: \"Uniting the intuition and the math behind PCA!\"\n",
+    "description: \"Understanding how ROC AUC can be misleading when class imbalance is involved!\"\n",
     "_draft: true\n",
-    "_date: today\n",
+    "_date: 2023-03-18\n",
     "_publish: true\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "id": "76fa22e7",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
    "id": "fe3e8518",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 42,
    "id": "97d6bbcc",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "id": "370393eb",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "id": "822d42dc",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "id": "d104baf7",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 46,
    "id": "42eea573",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 47,
    "id": "2b582be2",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "id": "9b4e584c",
    "metadata": {},
    "outputs": [
@@ -581,13 +581,12 @@
     "\n",
     "Precision, by contrast, doesn't care how many negatives there are. All it cares about is whether the examples that are classified as positive are actually positive. In fact, for the entire PR AUC chart, negatives only matter if they are misclassified as positive. Neither recall nor precision cares how many negatives the model correctly classifies as negative, as long as they all have lower scores than the positives.\n",
     "\n",
-    "#### Conclusion\n",
+    "#### Final Summary\n",
     "So as we can see, ROC AUC and PR AUC measure different things:\n",
     "* PR AUC focuses almost entirely on the positive class, only considering negatives insofar as they interfere with positive classifications. The model doesn't get any brownie points for correctly classifying a huge set of negatives correctly as long as the positives are taken care of. In our imbalanced example, the model did a poor job by misclassifying those 350 negatives, so PR AUC gave it a heavy penalty.\n",
     "* ROC AUC considers both classes, and will give a model brownie points for correctly classifying lots of negatives and positives. In our imbalanced example, adding lots of negative examples with low scores caused ROC AUC to give the model lots of brownie points for these correct classifications, overlooking those 350 misclassified negatives.\n",
     "\n",
-    "Depending on the situation, it's probably worth adding both to your metric suite!\n",
-    "\n"
+    "Depending on the situation, it's probably worth adding both to your metric suite!"
    ]
   }
  ],
