cli now has polling option

--- a/src/python/Cheat-Sheet-MLOps.ipynb
+++ b/src/python/Cheat-Sheet-MLOps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "91c31250",
+   "id": "46f63ed7",
    "metadata": {},
    "source": [
     "---\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b67fc4",
+   "id": "a16fb93f",
    "metadata": {},
    "source": [
     "This is a living document, and I'm no expert :). I'm just documenting things I learn about MLOps here. I'll include any resources I've found helpful at the end.\n",
@@ -77,15 +77,15 @@
     "\n",
     "## Resources\n",
     "* The *Adventures in Machine Learning* podcast has helpful episodes with common problems and various solutions (I was inspired to write this post after listening!)\n",
-    "  * Spotify links to episodes I listened to: [Part 1](https://open.spotify.com/episode/4uYadREg9IIQUl409bP1Z3?si=wsNs4LIZS2OFrnXIoFemxw&nd=1), [Part 2](https://open.spotify.com/episode/7Fwg0v3HnwCnJYQb13Rn9R?si=E1bdnX_FRReTQNnKcDw0Vg).\n",
-    "* [Neptune.ai](https://neptune.ai/blog/category/mlops) has some nice posts. Here's one on [data vs. concept drift](https://neptune.ai/blog/concept-drift-best-practices).\n",
-    "* [Shreya Shankar](https://www.shreya-shankar.com/) has some useful MLOps posts as well."
+    "  * Spotify links to episodes I listened to on a nice walk: [Part 1](https://open.spotify.com/episode/4uYadREg9IIQUl409bP1Z3?si=wsNs4LIZS2OFrnXIoFemxw&nd=1), [Part 2](https://open.spotify.com/episode/7Fwg0v3HnwCnJYQb13Rn9R?si=E1bdnX_FRReTQNnKcDw0Vg).\n",
+    "* [Neptune.ai's blog](https://neptune.ai/blog/category/mlops) has some helpful posts. Here's one on [data vs. concept drift](https://neptune.ai/blog/concept-drift-best-practices).\n",
+    "* [Shreya Shankar's blog](https://www.shreya-shankar.com/) has some useful MLOps posts as well."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f45ce00",
+   "id": "e8a9099d",
    "metadata": {},
    "outputs": [],
    "source": []
