cli now has polling option

--- a/src/python/Cheat-Sheet-MLOps.ipynb
+++ b/src/python/Cheat-Sheet-MLOps.ipynb
@@ -11,7 +11,7 @@
     "title: \"MLOps Cheat Sheet\"\n",
     "description: \"Assorted quick notes on common ML in production situations.\"\n",
     "_draft: true\n",
-    "_date: today\n",
+    "_date: 2023-03-19\n",
     "_publish: true\n",
     "---"
    ]
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a9099d",
+   "id": "63f7d90a",
    "metadata": {},
    "outputs": [],
    "source": []
