--- a/src/python/ROC-Vs-PR-AUC.ipynb
+++ b/src/python/ROC-Vs-PR-AUC.ipynb
@@ -10,7 +10,7 @@
     "slug: roc-vs-pr-auc\n",
     "title: \"ROC AUC vs. PR AUC for Class Imbalance\"\n",
     "description: \"Understanding how ROC AUC can be misleading when class imbalance is involved!\"\n",
-    "_draft: true\n",
+    "_draft: false\n",
     "_date: 2023-03-18\n",
     "_publish: true\n",
     "---"
