pre-deployment commit

--- a/src/python/Cheat-Sheet-MLOps.ipynb
+++ b/src/python/Cheat-Sheet-MLOps.ipynb
@@ -10,7 +10,7 @@
     "slug: cheat-sheet-mlops\n",
     "title: \"MLOps Cheat Sheet\"\n",
     "description: \"Assorted quick notes on common ML in production situations.\"\n",
-    "_draft: true\n",
+    "_draft: false\n",
     "_date: 2023-03-19\n",
     "_publish: true\n",
     "---"
@@ -21,7 +21,7 @@
    "id": "a16fb93f",
    "metadata": {},
    "source": [
-    "This is a living document, and I'm no expert :). I'm just documenting things I learn about MLOps here. I'll include any resources I've found helpful at the end.\n",
+    "This is a living document :). I'm just documenting things I learn about MLOps here. I'll include any resources I've found helpful at the end.\n",
     "\n",
     "## Data Drift\n",
     "Data drift occurs when the distribution of data in production changes over time. For example, a unimodal feature may become bimodal, or a power-law distributed feature may gain a thicker tail. To give a concrete example, a price feature distribution may change after the release of new and popular expensive items on an eCommerce website.\n",
